# stickybeak

./: .stickybeak.toml  .stickybeak.yaml  .stickybeak.yml  .travis.yml  LICENSE  README.md  package.yaml  stack.yaml  stickybeak.cabal  stickybeak.lock-8.0.2  stickybeak.yaml
app/: Main.hs
src/: Config.hs  Error.hs  Flags.hs  OS.hs  StickyBeak.hs  Stickybeak.hs  WatchUtils.hs
src/Stickybeak/: Internal.hs
test/: Spec.hs
