name:                stickybeak
version:             0.0.1.0
synopsis:            Watch files and trigger actions.
description:         Please see README.md
homepage:            https://github.com/justanotherdot/stickybeak#readme
license:             BSD3
license-file:        LICENSE
author:              Ryan James Spencer
maintainer:          spencer.ryanjames@gmail.com
copyright:           Copyright (c) 2016 Ryan James Spencer
category:            Utility
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config
                     , WatchUtils
                     , Flags
  build-depends:       base >= 4.7 && < 5
                     , text
                     , yaml
                     , unix
                     , process
                     , unagi-chan
                     , hinotify
                     , cmdargs
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs

executable stickybeak
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base
                     , stickybeak
                     , text
                     , yaml
                     , hinotify
                     , cmdargs
                     , directory
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , stickybeak
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/justanotherdot/stickybeak
