name:                stickybeak
version:             0.0.4.0
synopsis:            Watch files and trigger actions.
description:         Please see README.md
homepage:            https://github.com/justanotherdot/stickybeak#readme
license:             BSD3
license-file:        LICENSE
author:              Ryan James Spencer
maintainer:          spencer.ryanjames@gmail.com
copyright:           Copyright (c) 2016 Ryan James Spencer
category:            Utility
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Stickybeak
  build-depends:      base == 4.9.1.0
                    , async == 2.1.1
                    , containers == 0.5.7.1
                    , directory == 1.3.0.0
                    , hinotify == 0.3.9
                    , optparse-applicative == 0.13.2.0
                    , process
                    , stm == 2.4.4.1
                    , text == 1.2.2.1
                    , time == 1.6.0.1
                    , unix == 2.7.2.1
                    , bytestring == 0.10.8.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs

executable sb
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base
                     , stickybeak
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , QuickCheck
                     , stickybeak
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/justanotherdot/stickybeak
